--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,5 +1,30 @@
-.base{
+.el-card{
+    background: rgba(255,255,255,.7);
+    backdrop-filter: blur(25px);
+    border: 0;
+    border-radius: 10px;
+    width:60%;
     margin: auto;
-    margin-top: 10%;
-    width: 40%;
+    margin-top: 100px;
+}
+
+#captcha{
+    width:60%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.app{
+    width:100%;
+    height:100%:
+}
+html{
+    width: 100%;
+    height: 100%;
+    background: url(https://api.dujin.org/pic/yuanshen/) no-repeat;
+    background-size: 100% 100%;
+}
+
+body{
+    background: rgba(0,0,0,0)
 }
