--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,14 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>管理系统 | Cloudsdale 管理后台</title>
     <!-- 导入样式 -->
-    <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-plus/dist/index.css" />
     <!-- 导入 Vue 3 -->
-    <script src="https://unpkg.com/vue@3.2.37/dist/vue.global.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <!--生产模式 <script src="https://unpkg.com/vue@3.2.37/dist/vue.global.prod.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.2.37/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert/dist/sweetalert.min.js"></script>
+    <!--生产模式 <script src="https://cdn.jsdelivr.net/npm/vue@3.2.37/dist/vue.global.prod.js"></script>-->
     <!-- 导入组件库 -->
-    <link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
-    <script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/css/mdui.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/js/mdui.min.js"></script>
     <link rel="stylesheet" href="../static/css/admin.a7e38856.css"/>
 <!--    <script src="../static/js/monaco/basic-languages/javascript/javascript.js"></script>-->
 </head>
@@ -43,7 +43,7 @@
                 {% endif %}
             </el-sub-menu>
         </el-menu>
-        <el-alert class="alert" title="系统仍在测试，目前不支持上传图片，请使用图床或者公开网盘传图" type="warning" show-icon></el-alert>
+        <el-alert class="alert" title="工单系统存在严重Bug，每个工单一次最多提交一张图片，多的会被亲爱的 jQuery 吃掉，如果要放一张以上图片请直接发送链接，jQuery L" type="error" show-icon></el-alert>
         <el-alert class="alert" title="请所有管理员注意：保管好自己的密码，最好不要使用浏览器储存密码" type="warning" show-icon></el-alert>
         <el-alert class="alert" title="螃蟹已摆烂 请通过数据库连接的方式修改Wiki、工单状态（建议 Navicat）链接地址：39.107.155.145:27017" type="info" show-icon></el-alert>
         <el-alert class="alert" title="权限大于5的用户访问别人工单无权限的问题已修复，回复请使用管理平台，现在权限>=5的用户将能够在工单系统看到其他人的工单但不能回复" type="success" show-icon></el-alert>
@@ -79,7 +79,6 @@
                       <input class="mdui-textfield-input" id="dbname" type="text"/>
                     </div>
                     <el-button id="readdb" type="primary">查看数据库</el-button>
-                    <div id="monaco"></div>
                 </el-tab-pane>
                 <el-tab-pane label="Wiki 编辑器" name="third">Wiki 编辑器</el-tab-pane>
                 <el-tab-pane label="工单回复" name="fourth">
@@ -99,7 +98,7 @@
         </div>
     </div>
 </body>
-<script src="https://unpkg.com/element-plus@2.2.8/dist/index.full.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/element-plus@2.2.8/dist/index.full.js"></script>
 <script type="text/typescript">
 const goBack = () => {
   console.log('go back')
