--- a/templates/index.html
+++ b/templates/index.html
@@ -7,71 +7,46 @@
     <meta name="force-rendering" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>Cloudsdale 帮助中心</title>
-    <link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- 导入样式 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-plus/dist/index.css" />
+    <!-- 导入 Vue 3 -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.2.37/dist/vue.global.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/css/mdui.min.css"/>
     <link rel="stylesheet" href="../static/css/index.64e3adf6.css"/>
+    <style>
+.flex-grow {
+  flex-grow: 1;
+}
+</style>
 </head>
 <body class="mdui-theme-primary-teal mdui-theme-accent-teal">
-    <div class="mdui-appbar">
-      <div class="mdui-toolbar mdui-color-theme">
-        <a href="javascript:;" class="mdui-typo-headline">Cloudsdale 帮助中心</a>
-        <a href="javascript:;" class="mdui-typo-title">主页</a>
-        <div class="mdui-toolbar-spacer"></div>
-        <a href="/search" class="mdui-btn mdui-btn-icon" mdui-tooltip="{content: '搜索帮助文档'}">
-          <i class="mdui-icon material-icons">search</i>
-        </a>
-        <a href="javascript:window.location.reload();" class="mdui-btn mdui-btn-icon" mdui-tooltip="{content: '重载当前页面'}">
-          <i class="mdui-icon material-icons">refresh</i>
-        </a>
-        <a href="javascript:;" class="mdui-btn mdui-btn-icon" mdui-tooltip="{content: '用户'}" mdui-menu="{target: '#userdata'}">
-          <i class="mdui-icon material-icons">account_circle</i>
-        </a>
-          <ul class="mdui-menu" id="userdata">
-              <li class="mdui-menu-item">
-                <a href="javascript:;" class="mdui-ripple">
-                  <i class="mdui-menu-item-icon mdui-icon material-icons">account_circle</i>{% if username %}{{username}}{% else %}游客{% endif %}
-                </a>
-              </li>
-              {% if username %}
-              <li class="mdui-menu-item">
-                <a href="/user" class="mdui-ripple">
-                  用户中心
-                </a>
-              </li>
-              {% if admin %}
-              <li class="mdui-menu-item">
-                <a href="/admin" class="mdui-ripple">
-                  管理员后台
-                </a>
-              </li>
-              {% endif %}
-              <li class="mdui-menu-item">
-                <a href="/api/logout" class="mdui-ripple">
-                  退出
-                </a>
-              </li>
-              {% else %}
-              <li class="mdui-menu-item">
-                <a href="/user/login" class="mdui-ripple">
-                  登录
-                </a>
-              </li>
-              <li class="mdui-menu-item">
-                <a href="/user/reg" class="mdui-ripple">
-                  注册
-                </a>
-              </li>
-              {% endif %}
-              {% if isadmin %}
-              <li class="mdui-menu-item">
-                <a href="/admin" class="mdui-ripple">
-                  管理中心
-                </a>
-              </li>
-              {% endif %}
-            </ul>
-      </div>
-    </div>
+<div id="app">
+    <el-menu
+    :default-active="('1')"
+    class="el-menu-demo"
+    mode="horizontal"
+    :ellipsis="false"
+  >
+    <el-menu-item index="0" disabled style="color:#000; opacity: 0.5; font-size: 1.3em">Cloudsdale 帮助中心</el-menu-item>
+        <div class="flex-grow"></div>
+        <el-menu-item index="1">主页</el-menu-item>
+        <el-link :underline="false" href="/wiki"><el-menu-item index="2">Wiki</el-menu-item></el-link>
+        <el-sub-menu index="3">
+          <template #title>工单系统（Beta）</template>
+            <el-link :underline="false" href="/ticet/new"><el-menu-item index="3-1">提交工单</el-menu-item></el-link>
+            <el-link :underline="false" href="/ticket"><el-menu-item index="3-2">工单列表</el-menu-item></el-link>
+        </el-sub-menu>
+        {% if username %}
+        <el-sub-menu index="4">
+          <template #title>{{username}}</template>
+            <el-link :underline="false" href="/user"><el-menu-item index="4-1">用户中心</el-menu-item></el-link>
+            {% if isadmin %}<el-link :underline="false" href="/admin"><el-menu-item index="4-2">管理后台</el-menu-item></el-link>{% endif %}
+            <el-link :underline="false" href="/api/logout"><el-menu-item index="4-3">退出登录</el-menu-item></el-link>
+        </el-sub-menu>
+        {% else %}
+        <el-link :underline="false" href="/user/login"><el-menu-item index="4" href="">登录/注册</el-menu-item></el-link>
+        {% endif %}
+      </el-menu>
     <div class="hello">
         <div class="text mdui-typo">
            {% if username %}
@@ -83,19 +58,32 @@
             {% endif %}
         </div>
         <div class="btn">
-            <a href="/ticket" class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme-accent"><i class="mdui-icon material-icons">add</i> 提交新的支持请求</a>
-            <a href="/wiki" class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme-accent"><i class="mdui-icon material-icons">search</i> 帮助文档</a>
+            <a href="/ticket" class="el-button el-button--large el-button--primary" style="text-decoration:none"><i class="mdui-icon material-icons">add</i> 提交新的支持请求</a>
+            <a href="/wiki" class="el-button el-button--large" style="text-decoration:none"><i class="mdui-icon material-icons">search</i> 帮助文档</a>
         </div>
     </div>
     <div class="mdui-typo" style="text-align:center">
         <h2>热门Q&A</h2>
         <p>玩家们最常问的问题都在这里了。</p>
     </div>
-    <div id="qacontainer" class="qacontainer mdui-panel mdui-panel-popout" mdui-panel>
+    <div class="qacontainer">
+        <el-collapse id="qacontainer" accordion>
 
+        </el-collapse>
     </div>
+</div>
 </body>
-<script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/js/mdui.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/element-plus/dist/index.full.min.js"></script>
 <script src="../static/js/jquery-prod.js"></script>
 <script src="../static/js/index.js"></script>
+<script>
+    const input = Vue.ref('')
+    const App = {
+      input
+    };
+    const app = Vue.createApp(App);
+    app.use(ElementPlus);
+    app.mount("#app");
+</script>
 </html>
