--- a/templates/newticket.html
+++ b/templates/newticket.html
@@ -8,14 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>提交新工单 | Cloudsdale 工单系统</title>
     <!-- 导入样式 -->
-    <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-plus/dist/index.css" />
     <!-- 导入 Vue 3 -->
-    <script src="https://unpkg.com/vue@3.2.37/dist/vue.global.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <!--生产模式 <script src="https://unpkg.com/vue@3.2.37/dist/vue.global.prod.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.2.37/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert/dist/sweetalert.min.js"></script>
+    <!--生产模式 <script src="https://cdn.jsdelivr.net/npm/vue@3.2.37/dist/vue.global.prod.js"></script>-->
     <!-- 导入组件库 -->
-    <link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
-    <script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/css/mdui.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/js/mdui.min.js"></script>
     <link rel="stylesheet" href="../static/css/newticket.5314b63a.css"/>
 </head>
 <body>
@@ -43,7 +43,7 @@
             </el-sub-menu>
         </el-menu>
         <el-page-header content="提交新工单" onclick="javascript:window.location = '/ticket'"></el-page-header>
-        <el-alert class="alert" title="系统仍在测试，目前不支持上传图片，请使用图床或者公开网盘传图" type="warning" show-icon></el-alert>
+        <el-alert class="alert" title="工单系统存在严重Bug，每个工单一次最多提交一张图片，多的会被亲爱的 jQuery 吃掉，如果要放一张以上图片请直接发送链接，jQuery L" type="error" show-icon></el-alert>
         <div style="padding: 10px;">
           <div class="mdui-textfield mdui-textfield-floating-label">
             <label class="mdui-textfield-label">工单标题</label>
@@ -53,11 +53,14 @@
               <label class="mdui-textfield-label">工单内容</label>
               <textarea class="mdui-textfield-input"></textarea>
             </div>
+            <div id="image">
+            </div>
+            <el-button type="success" id="add" :icon="Upload">增加图片上传框</el-button>
             <el-button type="primary" id="submit" :icon="Upload">提交工单</el-button>
         </div>
     </div>
 </body>
-<script src="//unpkg.com/element-plus"></script>
+<script src="https://cdn.jsdelivr.net/npm/element-plus"></script>
 <script type="text/typescript">
 const goBack = () => {
   console.log('go back')
