--- a/templates/overview.html
+++ b/templates/overview.html
@@ -8,14 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>总览 | Cloudsdale 工单系统</title>
     <!-- 导入样式 -->
-    <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-plus/dist/index.css" />
     <!-- 导入 Vue 3 -->
-    <script src="https://unpkg.com/vue@3.2.37/dist/vue.global.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <!--生产模式 <script src="https://unpkg.com/vue@3.2.37/dist/vue.global.prod.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.2.37/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert/dist/sweetalert.min.js"></script>
+    <!--生产模式 <script src="https://cdn.jsdelivr.net/npm/vue@3.2.37/dist/vue.global.prod.js"></script>-->
     <!-- 导入组件库 -->
-    <link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
-    <script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/css/mdui.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/js/mdui.min.js"></script>
     <link rel="stylesheet" href="../static/css/ticket.4e3fdd6a.css"/>
 </head>
 <body>
@@ -42,7 +42,8 @@
                 {% endif %}
             </el-sub-menu>
         </el-menu>
-        <div style="padding:10px">
+        <div style="padding:10px 20px">
+            <el-alert class="alert" title="工单系统存在严重Bug，每个工单一次最多提交一张图片，多的会被亲爱的 jQuery 吃掉，如果要放一张以上图片请直接发送链接，jQuery L" type="error" show-icon></el-alert>
             <h2 class="title">总览</h2>
             <el-card shadow="always" class="box-card">
                 <div class="text item">
@@ -93,7 +94,7 @@
         </div>
     </div>
 </body>
-<script src="//unpkg.com/element-plus"></script>
+<script src="https://cdn.jsdelivr.net/npm/element-plus"></script>
 <script>
 const App = {};
 const app = Vue.createApp(App);
