--- a/templates/wiki.html
+++ b/templates/wiki.html
@@ -8,12 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>Wiki | Cloudsdale 帮助中心</title>
     <!-- 导入样式 -->
-    <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-plus/dist/index.css" />
     <!-- 导入 Vue 3 -->
-    <script src="https://unpkg.com/vue@3.2.37/dist/vue.global.js"></script>
-    <!--生产模式 <script src="https://unpkg.com/vue@3.2.37/dist/vue.global.prod.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.2.37/dist/vue.global.js"></script>
+    <!--生产模式 <script src="https://cdn.jsdelivr.net/npm/vue@3.2.37/dist/vue.global.prod.js"></script>-->
     <!-- 导入组件库 -->
-    <script src="//unpkg.com/element-plus"></script>
+    <script src="https://cdn.jsdelivr.net/npm/element-plus"></script>
 </head>
 <body>
     <div id="app">
