这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。这是什么？屎山。好怪哦，再看一眼。

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -98,7 +98,7 @@
         </div>
     </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/element-plus@2.2.8/dist/index.full.js"></script>
+<script src="https://unpkg.com/element-plus@2.2.8/dist/index.full.js"></script>
 <script type="text/typescript">
 const goBack = () => {
   console.log('go back')
